cabal-version:       >= 2.0

name:                hexes
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Colm Baston
maintainer:          colm@colmbaston.uk
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable hexes
  main-is:             Main.hs
  other-modules:       Hexagon
  default-language:    Haskell2010
  build-depends:       base       ^>= 4.14,
                       containers ^>= 0.6,
                       random     ^>= 1.2,
                       gloss      ^>= 1.13
