cabal-version:       >= 2.0

name:                hexes
version:             0.1.0.0
license-file:        LICENCE
author:              Colm Baston
maintainer:          colm@colmbaston.uk
build-type:          Simple

executable hexes
  main-is:             Main.hs
  other-modules:       Hexagon
  default-language:    Haskell2010
  build-depends:       base       ^>= 4.14,
                       containers ^>= 0.6,
                       random     ^>= 1.2,
                       gloss      ^>= 1.13
